--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,14 +2,14 @@ appname = sevenplus
 httpport = 755
 runmode = dev
 beego.BConfig.WebConfig.Session.SessionOn = true
-beego.BConfig.WebConfig.Session.SessionName = "noDijisteLaPalabraCorrecta"
+beego.BConfig.WebConfig.Session.SessionName = ""
 beego.BConfig.WebConfig.Session.SessionGCMaxLifetime = 86400
 beego.BConfig.WebConfig.Session.SessionCookieLifeTime = 86400
 SessionOn = true
-mssqluser = "sa"
-mssqlpass = "SunPlus7!"
-mssqlurls = "localhost"
-mssqldb   = "SUNPLUSADV"
-serverAux = "CUACUA-PC"
+mssqluser = ""
+mssqlpass = ""
+mssqlurls = ""
+mssqldb   = ""
+serverAux = ""
 TipoCampo = "2"
 
